# lesson_planner

./: .gitignore  Cargo.toml  README.md  build.sh  package-lock.json  package.json  tailwind.config.js
.github/workflows/: general.yml
migrations/: 20240325201103_create_users_table.sql
src/: db.rs  error.rs  main.rs  openai.rs  openai2.rs  query.rs  routes.rs  scratch.rs  template.rs  types.rs
src/handlers/: authenticated.rs  lesson.rs  lessons.rs  lessons2.rs  mod.rs  public.rs
src/template/: authenticated.rs  chat.rs  lesson.rs  lessons.rs  mod.rs  public.rs
static/: main.css  tailwind.css
templates/: account.html  base.html  classes.html  demo.html  form.html  initial_lesson.html  landing.html  lesson_builder.html  lesson_builder2.html  lesson_builder_inner.html  lesson_viewer.html  lesson_viewer2.html  log-in.html  login.html  profile.html  query.html  signup.html
templates/auth/: authenticated.html  login.html  public.html  signup.html
templates/lesson/: chat.html  lesson_builder.html  lesson_viewer.html
templates/sections/: classes.html  demo.html  landing.html  lessons.html  profile.html
