[package]
name = "lesson_planner"
version = "0.1.0"
edition = "2021"

[dependencies]
askama =  "0.12.0"
axum = { version = "0.6.18", features = ["macros"] }
axum-macros = "0.3.7"
hyper = { version = "0.14.26", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
# tower-livereload = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

