[package]
name = "lesson_planner"
version = "0.1.0"
edition = "2021"

[dependencies]
askama =  { version = "0.12.0", features = ["markdown"]}
axum = { version = "0.6.18", features = ["macros"] }
axum-macros = "0.3.7"
comrak = "0.18"
hyper = { version = "0.14.27", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["full"] }
# tower-livereload = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

