[package]
name = "lesson_planner"
version = "0.1.0"
edition = "2021"

[dependencies]
askama =  { version = "0.12.1", features = ["markdown"]}
axum = { version = "0.7.4", features = ["macros"] }
axum-macros = "0.4.1"
comrak = "0.21"
hyper = { version = "1.2.0", features = ["full"] }
reqwest = { version = "0.12.1", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
# tower-livereload = "0.7.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

